[gd_scene load_steps=12 format=3 uid="uid://b7pfh5uv4qil7"]

[ext_resource type="Script" path="res://control.gd" id="1_l3qlv"]
[ext_resource type="PackedScene" uid="uid://c222tr58xaie0" path="res://powerup.tscn" id="2_p1klo"]
[ext_resource type="FontFile" uid="uid://b2ukv27mx647y" path="res://addons/The Bomb Sound Italic.ttf" id="2_v714o"]
[ext_resource type="Texture2D" uid="uid://djax4nm55jnr7" path="res://rock.png" id="3_dno51"]
[ext_resource type="Texture2D" uid="uid://bvaoxwf4vdq2m" path="res://paper.png" id="4_lkisw"]
[ext_resource type="Texture2D" uid="uid://c4kme61o5n4l6" path="res://scissors.png" id="5_6rrbt"]

[sub_resource type="Gradient" id="Gradient_8e3ci"]
offsets = PackedFloat32Array(0, 0.00909091, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.227273, 0.227273, 0.227273, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hvjki"]
gradient = SubResource("Gradient_8e3ci")

[sub_resource type="Animation" id="Animation_jabyt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(150, 152)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_lgsrp"]
resource_name = "winUpdate"
length = 0.5667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.433333),
"transitions": PackedFloat32Array(1, -461.439, 1),
"update": 0,
"values": [Vector2(150, 152), Vector2(150, 85), Vector2(150, 85)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.4, 0.433333),
"transitions": PackedFloat32Array(1, 0.366022, 0.68302, 12.1257),
"update": 1,
"values": [false, true, true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.433333, 0.533333),
"transitions": PackedFloat32Array(1, 11.3137, 1, 0.00232266),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lnc4s"]
_data = {
"RESET": SubResource("Animation_jabyt"),
"winUpdate": SubResource("Animation_lgsrp")
}

[node name="Control" type="Node"]
script = ExtResource("1_l3qlv")

[node name="game" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label5" type="Label" parent="game"]
layout_mode = 0
offset_left = 670.0
offset_top = 435.0
offset_right = 1244.0
offset_bottom = 637.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="game"]
layout_mode = 0
offset_left = 798.0
offset_top = 123.0
offset_right = 1115.0
offset_bottom = 537.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="game"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 475.0
offset_top = 588.0
offset_right = 1404.0
offset_bottom = 995.0

[node name="Button" type="TextureButton" parent="game/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0
texture_normal = ExtResource("3_dno51")
texture_disabled = SubResource("GradientTexture1D_hvjki")

[node name="Sprite2D" type="Sprite2D" parent="game/HBoxContainer/Button"]
visible = false
scale = Vector2(0.923547, 0.923547)
texture = ExtResource("3_dno51")
centered = false

[node name="Button2" type="TextureButton" parent="game/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_lkisw")

[node name="Sprite2D" type="Sprite2D" parent="game/HBoxContainer/Button2"]
visible = false
scale = Vector2(0.926605, 0.926605)
texture = ExtResource("4_lkisw")
centered = false

[node name="Button3" type="TextureButton" parent="game/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_6rrbt")

[node name="Sprite2D" type="Sprite2D" parent="game/HBoxContainer/Button3"]
visible = false
scale = Vector2(0.923547, 0.923547)
texture = ExtResource("5_6rrbt")
centered = false

[node name="updateLabel" type="Label" parent="game"]
layout_mode = 0
offset_left = 150.0
offset_top = 152.0
offset_right = 381.0
offset_bottom = 211.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 50
text = "+10 wins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="game/updateLabel"]
libraries = {
"": SubResource("AnimationLibrary_lnc4s")
}
autoplay = "winUpdate"

[node name="updateLabel2" type="Label" parent="game"]
visible = false
layout_mode = 0
offset_left = 159.0
offset_top = 73.0
offset_right = 390.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 50
text = "+10 wins"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="game"]
layout_mode = 0
offset_left = 30.0
offset_top = 156.0
offset_right = 455.0
offset_bottom = 244.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 90
text = "Wins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="game"]
layout_mode = 0
offset_left = 1492.0
offset_top = 59.0
offset_right = 1869.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 75
text = "Pick your move!

Goal: Reach 1000 wins"
autowrap_mode = 2

[node name="Label3" type="Label" parent="game"]
layout_mode = 0
offset_left = 35.0
offset_top = 868.0
offset_right = 471.0
offset_bottom = 1009.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 50
text = "Next Power Up: 10 wins"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="chainLabel" type="Label" parent="game"]
layout_mode = 0
offset_left = 84.0
offset_top = 242.0
offset_right = 384.0
offset_bottom = 335.0
theme_override_fonts/font = ExtResource("2_v714o")
theme_override_font_sizes/font_size = 60
text = "Chain: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.576471)

[node name="powerup" parent="." instance=ExtResource("2_p1klo")]
visible = false

[connection signal="pressed" from="game/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="game/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="game/HBoxContainer/Button3" to="." method="_on_button_3_pressed"]
